--- a/css/style.css
+++ b/css/style.css
@@ -36,9 +36,6 @@ box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
 
 .nav{ display: flex;
       align-items: center;
-        
-      
-
 }
 
 .ul-header { display: flex;
@@ -452,5 +449,248 @@ ul {
     padding: 0 15px;
 }
 
+/* .logo-social-media{margin-right: 80px;} */
+
 .logo-text-div{margin-right:120px;}
 .icon-footer {fill: #f4f4fd;}
+
+.subscribe {margin-left: auto;}
+
+.subscribe-p {font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    margin-bottom: 16px;
+}
+
+.form-all {display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.label-email {}
+
+.footer-input {border: 1px solid #fff;
+border-radius: 4px;
+width: 264px;
+height: 40px;
+margin-right: 24px;
+font-family: "Roboto", sans-serif;
+background: #2e2f42;
+}
+
+.footer-button {display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 16px;
+    border-radius: 4px;
+    padding: 8px 24px;
+    width: 165px;
+    height: 40px;
+    background: #4d5ae5;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: #fff;
+    cursor: pointer;
+    border:none;
+}
+
+.footersvg-send-icon {fill: #fff;}
+
+.footer-input::placeholder {
+font-family: "Roboto", sans-serif;
+font-weight: 400;
+font-size: 12px;
+line-height: 2;
+letter-spacing: 0.04em;
+color: #fff;
+padding: 8px 8px 16px;
+}
+
+.backdrop.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    width: 408px;
+    min-height: 584px;
+    border-radius: 4px;
+
+    transform: translate(-50%, -50%);
+
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+        0 2px 1px 0 rgba(0, 0, 0, 0.2);
+    background-color: #fcfcfc;
+
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 24px;
+    padding-top: 72px;
+}
+
+.backdrop:not(.is-open) .modal {
+    transform: translate(-50%, -100%);
+}
+
+.modal-close-btn {position: absolute;
+top: 24px;
+right:24px;
+border-radius: 50%;
+background-color: #e7e9fc;
+border: 1px solid rgba(0, 0, 0, 0.1);
+display: flex;
+justify-content: center;
+align-items: center;
+height:24px;
+width:24px;
+cursor: pointer;
+}
+
+.svg-close-btn{fill:#2e2f42;}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus{background-color: #404bbf;
+border:none;}
+.modal-close-btn:hover .svg-close-btn {
+    fill: #fff;
+}
+
+.modal-p {margin-bottom: 16px;
+font-family: "Roboto", sans-serif;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+text-align: center;
+color: #2e2f42;}
+
+.modal-form-field {margin-bottom: 8px;
+}
+
+.label-modal {display: block;
+margin-bottom: 4px;
+font-family: "Roboto", sans-serif;
+font-weight: 400;
+    font-size: 12px;
+    line-height: 1.7;
+    letter-spacing: 0.04em;
+    color: #8e8f99;}
+
+.modal-form-wrapper {position: relative;
+}
+
+.input-modal {width: 100%;
+border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    width: 360px;
+    height: 40px;
+padding: 8px 38px;
+}
+
+.svg-modal {position: absolute;
+top:50%;
+left:16px;
+transform: translateY(-50%);
+pointer-events: none;
+fill: #2e2f42;
+}
+
+.modal-form-wrapper:focus-within {
+    border: #4d5ae5;
+}
+
+.input-modal:focus~.svg-modal {
+    fill: #4d5ae5;
+}
+
+.form-input{
+        border: 1px solid rgba(46, 47, 66, 0.4);
+        border-radius: 4px;
+        width: 100%;
+        height: 120px;
+        resize:none;
+        font-family: "Roboto", sans-serif;
+            font-weight: 400;
+            font-size: 12px;
+            line-height: 1.7;
+            letter-spacing: 0.04em;
+}
+
+.form-input::placeholder{
+        color: rgba(46, 47, 66, 0.4);
+        padding: 8px 16px;
+}
+
+.checkbox {margin-bottom: 24px;}
+
+input[type="checkbox"]:checked + label .checkbox-span{
+    background-color:#404bbf;
+    border:none;
+    fill:#f4f4fd;
+}
+
+.visually-hidden {position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;}
+
+.checkbox-label {line-height:1.7;
+letter-spacing: 0.04em;
+color:#8e8f99;
+font-size:12px;}
+
+.checkbox-span {
+    border-radius: 2px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    display:inline-flex;
+    align-items: center;
+    justify-content: center;
+    fill:transparent;
+    width:16px;
+    height:16px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin-right: 8px;
+}
+
+.galochka {}
+
+.checkbox-link {
+    line-height: 1.33333;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: #4d5ae5;}
+
+.form-button{
+    font-family: "Roboto", sans-serif;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        color: #fff;
+        background-color: #4d5ae5;
+        cursor: pointer;
+        display: block;
+        min-width: 169px;
+        height: 56px;
+        border: none;
+        border-radius: 4px;
+        margin: 0 auto;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-button:hover,
+.form-button:focus{background-color: #404bbf;}
