--- a/css/style.css
+++ b/css/style.css
@@ -479,7 +479,14 @@ width: 264px;
 height: 40px;
 margin-right: 24px;
 font-family: "Roboto", sans-serif;
-background: #2e2f42;
+/* background: #2e2f42; */
+background-color: transparent;
+font-size: 12px;
+line-height: 2;
+letter-spacing: 0.04em;
+padding-left: 16px;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+color: #ffffff;
 }
 
 .footer-button {display: flex;
@@ -511,8 +518,8 @@ font-weight: 400;
 font-size: 12px;
 line-height: 2;
 letter-spacing: 0.04em;
-color: #fff;
-padding: 8px 8px 16px;
+color: #ffffff;
+/* padding: 8px 8px 16px; */
 }
 
 .backdrop.is-open {
