--- a/css/style.css
+++ b/css/style.css
@@ -524,16 +524,20 @@ color: #ffffff;
 /* padding: 8px 8px 16px; */
 }
 
-.backdrop is-open {
+.backdrop{
+position: fixed;
+top: 0;
+left: 0;
+height: 100%;
+width: 100%;
+background-color: rgba(46, 47, 66, 0.4);
+transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+
+.backdrop.is-open {
     opacity: 1;
     visibility: visible;
     pointer-events: auto;
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    background-color: rgba(46, 47, 66, 0.4);
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 
 .modal {
