--- a/css/style.css
+++ b/css/style.css
@@ -576,6 +576,8 @@ align-items: center;
 height:24px;
 width:24px;
 cursor: pointer;
+padding: 0;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .svg-close-btn{fill:#2e2f42;}
