--- a/css/style.css
+++ b/css/style.css
@@ -580,13 +580,14 @@ padding: 0;
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.svg-close-btn{fill:#2e2f42;}
+.svg-close-btn{fill:#2e2f42;
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 
 .modal-close-btn:hover,
 .modal-close-btn:focus{background-color: #404bbf;
 border:none;}
 .modal-close-btn:hover .svg-close-btn {
-    fill: #fff;
+    fill: #ffffff;
 }
 
 .modal-p {margin-bottom: 16px;
