--- a/css/style.css
+++ b/css/style.css
@@ -585,9 +585,10 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 
 .modal-close-btn:hover,
 .modal-close-btn:focus{background-color: #404bbf;
-border:none;}
+border:none;
+fill: #ffffff}
 .modal-close-btn:hover .svg-close-btn {
-    fill: #ffffff;
+    fill: #fff;
 }
 
 .modal-p {margin-bottom: 16px;
