--- a/css/style.css
+++ b/css/style.css
@@ -585,8 +585,7 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 
 .modal-close-btn:hover,
 .modal-close-btn:focus{background-color: #404bbf;
-border:none;
-fill: #ffffff}
+border:none;}
 .modal-close-btn:hover .svg-close-btn {
     fill: #fff;
 }
