--- a/css/style.css
+++ b/css/style.css
@@ -586,9 +586,15 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 .modal-close-btn:hover,
 .modal-close-btn:focus{background-color: #404bbf;
 border:none;}
-.modal-close-btn:hover .svg-close-btn {
+
+.modal-close-btn:hover .svg-close-btn,
+.modal-close-btn:focus .svg-close-btn {
     fill: #fff;
+    /* Меняем цвет иконки */
 }
+/* .modal-close-btn:hover .svg-close-btn {
+    fill: #fff;
+} */
 
 .modal-p {margin-bottom: 16px;
 font-family: "Roboto", sans-serif;
