--- a/css/style.css
+++ b/css/style.css
@@ -626,6 +626,10 @@ border: 1px solid rgba(46, 47, 66, 0.4);
     width: 360px;
     height: 40px;
 padding: 8px 38px;
+background-color: transparent;
+outline: transparent;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .svg-modal {position: absolute;
@@ -637,7 +641,7 @@ fill: #2e2f42;
 }
 
 .modal-form-wrapper:focus-within {
-    border: #4d5ae5;
+    border-color: #4D5AE5;
 }
 
 .input-modal:focus~.svg-modal {
