--- a/css/style.css
+++ b/css/style.css
@@ -618,6 +618,11 @@ font-weight: 400;
     color: #8e8f99;}
 
 .modal-form-wrapper {position: relative;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+        width: 360px;
+        height: 40px;
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .input-modal {width: 100%;
