--- a/css/style.css
+++ b/css/style.css
@@ -634,6 +634,8 @@ padding: 8px 38px;
 background-color: transparent;
 outline: transparent;
 transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+border: none;
+outline: transparent;
 
 }
 
@@ -649,9 +651,18 @@ fill: #2e2f42;
     border-color: #4D5AE5;
 }
 
+/* Изменение цвета иконки при фокусе на инпут */
+.input-modal:focus+.svg-modal {
+    fill: #4D5AE5;
+}
+
+/* .modal-form-wrapper:focus-within {
+    border-color: #4D5AE5;
+}
+
 .input-modal:focus~.svg-modal {
     fill: #4d5ae5;
-}
+} */
 
 .form-input{
         border: 1px solid rgba(46, 47, 66, 0.4);
