--- a/css/style.css
+++ b/css/style.css
@@ -638,6 +638,7 @@ left:16px;
 transform: translateY(-50%);
 pointer-events: none;
 fill: #2e2f42;
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-wrapper:focus-within {
