--- a/css/style.css
+++ b/css/style.css
@@ -658,13 +658,18 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
         font-family: "Roboto", sans-serif;
             font-weight: 400;
             font-size: 12px;
-            line-height: 1.7;
+            line-height: 1.17;
             letter-spacing: 0.04em;
+            color: rgba(46, 47, 66, 0.4);
+            background-color: transparent;
+            padding: 8px 16px;
+            outline: transparent;
+            transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-input::placeholder{
         color: rgba(46, 47, 66, 0.4);
-        padding: 8px 16px;
+        /* padding: 8px 16px; */
 }
 
 .checkbox {margin-bottom: 24px;}
