--- a/css/style.css
+++ b/css/style.css
@@ -687,7 +687,7 @@ input[type="checkbox"]:checked + label .checkbox-span{
     padding: 0;
     overflow: hidden;}
 
-.checkbox-label {line-height:1.7;
+.checkbox-label {line-height:1.17;
 letter-spacing: 0.04em;
 color:#8e8f99;
 font-size:12px;}
@@ -701,7 +701,7 @@ font-size:12px;}
     fill:transparent;
     width:16px;
     height:16px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     margin-right: 8px;
 }
 
