--- a/css/style.css
+++ b/css/style.css
@@ -672,6 +672,10 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
         /* padding: 8px 16px; */
 }
 
+.form-input:focus {
+    border-color: #4D5AE5;
+}
+
 .checkbox {margin-bottom: 24px;}
 
 input[type="checkbox"]:checked + label .checkbox-span{
