--- a/css/style.css
+++ b/css/style.css
@@ -605,7 +605,13 @@ letter-spacing: 0.02em;
 text-align: center;
 color: #2e2f42;}
 
-.modal-form-field {margin-bottom: 16px;
+.modal-form-field {margin-bottom: 8px;
+}
+
+.modal-form-field:nth-last-child(1),
+.modal-form-field:nth-last-child(2),
+.modal-form-field:nth-last-child(3) {
+    margin-bottom: 16px;
 }
 
 .label-modal {display: block;
@@ -633,8 +639,8 @@ transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .svg-modal {position: absolute;
-top:50%;
-left:16px;
+top: 50%;
+left: 16px;
 transform: translateY(-50%);
 pointer-events: none;
 fill: #2e2f42;
