--- a/css/style.css
+++ b/css/style.css
@@ -647,7 +647,12 @@ fill: #2e2f42;
 transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-form-wrapper:focus-within {
+/* .modal-form-wrapper:focus-within {
+    border-color: #4D5AE5;
+} */
+
+.form-input:focus,
+.input-modal:focus {
     border-color: #4D5AE5;
 }
 
