--- a/css/style.css
+++ b/css/style.css
@@ -477,7 +477,7 @@ ul {
 border-radius: 4px;
 width: 264px;
 height: 40px;
-margin-right: 24px;
+/* margin-right: 24px; */
 font-family: "Roboto", sans-serif;
 /* background: #2e2f42; */
 background-color: transparent;
@@ -493,7 +493,7 @@ color: #ffffff;
     align-items: center;
     justify-content: center;
     flex-direction: row;
-    gap: 16px;
+    /* gap: 16px; */
     border-radius: 4px;
     padding: 8px 24px;
     width: 165px;
@@ -531,7 +531,11 @@ left: 0;
 height: 100%;
 width: 100%;
 background-color: rgba(46, 47, 66, 0.4);
-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+opacity: 0;
+visibility: hidden;
+pointer-events: none;
+}
 
 .backdrop.is-open {
     opacity: 1;
